objects/Troubleshoot_Aids__c.object
<CustomObject>
    <description>List of links to other sources of data for troubleshooting case issues</description>
    <fields>
        <fullName>Field_Linked__c</fullName>
        <inlineHelpText>Field that the URL is to be launched for</inlineHelpText>
        <label>Field Linked</label>
        <picklist>
            <picklistValues>
                <fullName>Reason</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <inlineHelpText>Must be an exact match to the values available for the field linked</inlineHelpText>
        <label>Field Value</label>
        <picklist>
            <picklistValues>
                <fullName>Application Issue/Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandwidth/Tunnel settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connectivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drive Failure/Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Problem/Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIC Failure/Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packet Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qos Configuration/Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reordering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Routing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Crash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Rebooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topology question/review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interace/CLI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>Location of troubleshooting information</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Troubleshoot Aid</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Troubleshoot Aids Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Troubleshoot Aids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Field_Linked_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Field_Linked__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Field_Linked__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_Value_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Field_Value__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Field_Value__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>